# Lucy-Framework-V2

./: CMakeLists.txt  imgui.ini
dependencies/include/: uuid_v4.h
include/: OpenGL.h  RenderAPI.h
include/GraphicsAPI/: API.h  DrawCall.h  FrameBuffer.h  IndexBuffer.h  Shader.h  Texture.h  Types.h  UniformBuffer.h  VertexArray.h  VertexBuffer.h
include/LucyGL/: FrameBuffer.h  IndexBuffer.h  Shader.h  Texture.h  Types.h  VertexArray.h
src/: imgui.ini  main.cpp
src/Core/: ECS.h  Engine.h  Enumerations.h  Events.cpp  Events.h  Functions.cpp  Functions.h  Window.h
src/Core/Components/: Camera.h  ChildEntities.h  Components.h  Light.h  Material.h  Mesh.h  MeshFilter.h  MeshRenderer.h  ParentEntity.h  Sprite.h  SpriteRenderer.h  Tag.h  TextureRaw.h  Transform.h
src/Core/Editor/: Editor.cpp  Editor.h  EditorPanel.h  GamePanel.h  InspectorPanel.h  Panels.h  ScenePanel.h  SpritePanel.h
src/Core/Editor/Panels/: CameraPanel.h  EditorPanel.cpp  EditorPanel.h  GamePanel.cpp  GamePanel.h  GuiPanel.h  Import.h  InspectorPanel.cpp  InspectorPanel.h  Panels.h  ScenePanel.cpp  (+7 more)
src/Core/Registries/: FrameBufferRegistry.cpp  FrameBufferRegistry.h  ShaderRegistry.cpp  ShaderRegistry.h  SpriteRegistry.cpp  SpriteRegistry.h  VertexArrayRegistry.cpp  VertexArrayRegistry.h  WindowRegistry.h
src/Core/Renderer/: RenderPass.h  RenderUtil.cpp  RenderUtil.h  Renderer.cpp  Renderer.h  SpriteRenderPass.cpp  SpriteRenderPass.h  SpriteRenderer.cpp  SpriteRenderer.h
src/Core/Systems/: CameraSystem.cpp  CameraSystem.h
src/Core/Util/: FileIO.h  Logger.h  Serializer.cpp  Serializer.h  ToYAML.cpp  ToYAML.h
src/World/: BlockRegistry.h  Chunk.cpp  Chunk.h  Column.h  World.h
(+18 files in other folders)
